fix(mds-banner): align content to banner container

--- a/projects/stencil/src/components/mds-banner/mds-banner.css
+++ b/projects/stencil/src/components/mds-banner/mds-banner.css
@@ -18,6 +18,7 @@
 
   @apply
     grid
+    grid-cols-1
     transition-cosmetic;
 
   background-color: var(--background);
@@ -96,6 +97,9 @@
 }
 
 .icon {
+  @apply
+    shrink-0;
+
   color: var(--icon-color);
 }
 
